--- a/04_merge_e_groupby/01_merge_dataframes.ipynb
+++ b/04_merge_e_groupby/01_merge_dataframes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "5  HH1158    Maria     27  77777-666"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "4  HH1158     Maria     27  77777-666"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "7  HH1158  2019-04-10    500"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "1  HH1158    Maria       27  77777-666    Maria       27  77777-666"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
        "1  HH1158    Maria       27  77777-666       27  77777-666"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
        "1  HH1158    Maria       27  77777-666       27  77777-666"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,11 +573,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "clientes_unicos = lojas.drop_duplicates(subset='Id')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# left join\n",
+    "esquerda = pd.merge(cadastro_a, compras, how=\"left\", on=[\"Id\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Id      Nome   \n",
+       "AA2920  Victor     225.0\n",
+       "BB4563  Amanda       0.0\n",
+       "CC2139  Bruna       40.0\n",
+       "DE2521  Carlos       0.0\n",
+       "GT3462  Ricardo      0.0\n",
+       "HH1158  Maria      550.0\n",
+       "Name: Valor, dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "esquerda.groupby(['Id', 'Nome'])['Valor'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Nome_x</th>\n",
+       "      <th>Idade_x</th>\n",
+       "      <th>CEP_x</th>\n",
+       "      <th>Nome_y</th>\n",
+       "      <th>Idade_y</th>\n",
+       "      <th>CEP_y</th>\n",
+       "      <th>_merge</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AA2920</td>\n",
+       "      <td>Victor</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>00092-029</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>left_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BB4563</td>\n",
+       "      <td>Amanda</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>11111-111</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>left_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CC2139</td>\n",
+       "      <td>Bruna</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>22222-888</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>left_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DE2521</td>\n",
+       "      <td>Carlos</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>00000-999</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>left_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GT3462</td>\n",
+       "      <td>Ricardo</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>88888-111</td>\n",
+       "      <td>Ricardo</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>88888-111</td>\n",
+       "      <td>both</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>HH1158</td>\n",
+       "      <td>Maria</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>77777-666</td>\n",
+       "      <td>Maria</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>77777-666</td>\n",
+       "      <td>both</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>CC9999</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Marcos</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>00092-029</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>EF4488</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Patricia</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>11111-111</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>DD9999</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ericka</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>11111-888</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Id   Nome_x  Idade_x      CEP_x    Nome_y  Idade_y      CEP_y  \\\n",
+       "0  AA2920   Victor     20.0  00092-029       NaN      NaN        NaN   \n",
+       "1  BB4563   Amanda     35.0  11111-111       NaN      NaN        NaN   \n",
+       "2  CC2139    Bruna     40.0  22222-888       NaN      NaN        NaN   \n",
+       "3  DE2521   Carlos     54.0  00000-999       NaN      NaN        NaN   \n",
+       "4  GT3462  Ricardo     30.0  88888-111   Ricardo     30.0  88888-111   \n",
+       "5  HH1158    Maria     27.0  77777-666     Maria     27.0  77777-666   \n",
+       "6  CC9999      NaN      NaN        NaN    Marcos     19.0  00092-029   \n",
+       "7  EF4488      NaN      NaN        NaN  Patricia     30.0  11111-111   \n",
+       "8  DD9999      NaN      NaN        NaN    Ericka     22.0  11111-888   \n",
+       "\n",
+       "       _merge  \n",
+       "0   left_only  \n",
+       "1   left_only  \n",
+       "2   left_only  \n",
+       "3   left_only  \n",
+       "4        both  \n",
+       "5        both  \n",
+       "6  right_only  \n",
+       "7  right_only  \n",
+       "8  right_only  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# outer\n",
+    "pd.merge(cadastro_a, cadastro_b, how='outer', on=['Id'], indicator=True)"
    ]
   },
   {
